objects/ASI_HK_CRM_Channel_Local_Channel_Map__c.object
<CustomObject>
    <description>ASI HK CRM - Channel to Local Channel Mapping Object</description>
    <fields>
        <fullName>ASI_CRM_Channel_Admin1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Channel Sales Admin</description>
        <label>Channel Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Channel_to_Local_Channel_Map</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Channel_Admin2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>2nd Channel Admin</description>
        <label>Channel Admin 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Channel_to_Local_Channel_Map1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Channel_Admin3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Admin 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Channel_to_Local_Channel_Map2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Channel_Map_Unique_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uses value from Channel picklist as a unique ID for the record</description>
        <label>Channel Map Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>0DM - Domestic Customer</fullName>
                </value>
                <value>
                    <fullName>1CS - Cash Sales</fullName>
                </value>
                <value>
                    <fullName>1DL - Dealer</fullName>
                </value>
                <value>
                    <fullName>1JS - Wine Shop</fullName>
                </value>
                <value>
                    <fullName>1TD - Trading/Direct Sales</fullName>
                </value>
                <value>
                    <fullName>1WH - Wholesaler</fullName>
                </value>
                <value>
                    <fullName>2BR - Bar/Lounge/Night Club/Karaoke</fullName>
                </value>
                <value>
                    <fullName>2BW - Night Club</fullName>
                </value>
                <value>
                    <fullName>2CS - Cash Sales</fullName>
                </value>
                <value>
                    <fullName>2HT - Hotel</fullName>
                </value>
                <value>
                    <fullName>2MC - Bar &amp; Restaurant</fullName>
                </value>
                <value>
                    <fullName>2MR - Bar &amp; Restaurant - High</fullName>
                </value>
                <value>
                    <fullName>2TD - Prestige Off (Wine Shop)</fullName>
                </value>
                <value>
                    <fullName>2WR - Wholesaler On (HBR)</fullName>
                </value>
                <value>
                    <fullName>3CS - Cash Sales</fullName>
                </value>
                <value>
                    <fullName>3PC - Private Customers</fullName>
                </value>
                <value>
                    <fullName>3ST - Staff Purchase</fullName>
                </value>
                <value>
                    <fullName>3TD - Trading/Direct Sales</fullName>
                </value>
                <value>
                    <fullName>3ZZ - Luxury</fullName>
                </value>
                <value>
                    <fullName>4CR - Chinese Restaurant</fullName>
                </value>
                <value>
                    <fullName>4CS - Cash Sales</fullName>
                </value>
                <value>
                    <fullName>4TD - Trading/Direct Sales</fullName>
                </value>
                <value>
                    <fullName>4WR - Western Restaurant</fullName>
                </value>
                <value>
                    <fullName>4ZZ - Chinese Restaurant - Group</fullName>
                </value>
                <value>
                    <fullName>5AL - Airlines</fullName>
                </value>
                <value>
                    <fullName>5DM - Diplomats</fullName>
                </value>
                <value>
                    <fullName>5IC - Intecom Office Sales</fullName>
                </value>
                <value>
                    <fullName>5ZZ - Others</fullName>
                </value>
                <value>
                    <fullName>6BL - Bar - Local</fullName>
                </value>
                <value>
                    <fullName>6BW - Bar - Western</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Local_Channel__c</fullName>
        <label>Local Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>F10 - Wholesalers - Off</fullName>
                </value>
                <value>
                    <fullName>F11 - Dealers / Cash Sales</fullName>
                </value>
                <value>
                    <fullName>F12 - Japanese Store</fullName>
                </value>
                <value>
                    <fullName>F14 - Other General Trade</fullName>
                </value>
                <value>
                    <fullName>F3 - Supermarket Chain</fullName>
                </value>
                <value>
                    <fullName>F5 - Modern Wine Shop</fullName>
                </value>
                <value>
                    <fullName>N1 - Chinese Restaurants</fullName>
                </value>
                <value>
                    <fullName>N11 - Chinese Restaurants-Group</fullName>
                </value>
                <value>
                    <fullName>N3 - Prestige HBR/MOT/MC</fullName>
                </value>
                <value>
                    <fullName>N5 - MOT / HBR</fullName>
                </value>
                <value>
                    <fullName>N6 - Wholesalers - On</fullName>
                </value>
                <value>
                    <fullName>N7 - Traditional On Trade</fullName>
                </value>
                <value>
                    <fullName>P1 - P2/3 Customers (indirect)</fullName>
                </value>
                <value>
                    <fullName>ST - Staff Purchase</fullName>
                </value>
                <value>
                    <fullName>T10 - DF Sales - HK</fullName>
                </value>
                <value>
                    <fullName>T11 - DP Sales - Others</fullName>
                </value>
                <value>
                    <fullName>F1 - General Trade</fullName>
                </value>
                <value>
                    <fullName>N4 - Other HBR</fullName>
                </value>
                <value>
                    <fullName>T9 - Luxury &amp; Corporate</fullName>
                </value>
                <value>
                    <fullName>T1 - Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Pricing_Channel__c</fullName>
        <description>Pricing Channel</description>
        <label>Pricing Channel</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Channel to Local Channel Map</label>
    <listViews>
        <fullName>ASI_HK_CRM_All_Channel_Mappings</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Channel_Map_Unique_ID__c</columns>
        <columns>ASI_HK_CRM_Channel__c</columns>
        <columns>ASI_HK_CRM_Local_Channel__c</columns>
        <columns>ASI_CRM_Channel_Admin1__c</columns>
        <columns>ASI_CRM_Channel_Admin2__c</columns>
        <columns>ASI_CRM_Channel_Admin3__c</columns>
        <columns>ASI_CRM_Channel_Admin4__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Channel_Local_Channel_Map__c.ASI_HK_CRM_Channel_to_Local_Channel_Map</value>
        </filters>
        <label>All ASI HK CRM - Channel Mappings</label>
        <language>en_US</language>
        <sharedTo>
            <role>ASI_ATR_IT_Manager</role>
            <roleAndSubordinates>ASI_HK_CRM</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CLC-Map-{0000}</displayFormat>
        <label>Channel to Local Channel Map</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel to Local Channel Map</pluralLabel>
    <recordTypes>
        <fullName>ASI_HK_CRM_Channel_to_Local_Channel_Map</fullName>
        <active>true</active>
        <label>Channel to Local Channel Map (HK)</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>